// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartTransformation Legend config should be always disabled for single series and push this info out 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "colors": Object {
          "colorAssignments": Array [
            Object {
              "color": Object {
                "type": "guid",
                "value": "1",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "$#,##0.00",
                  "identifier": "aangOxLSeztu",
                  "localIdentifier": "m_aangOxLSeztu",
                  "name": "Amount",
                  "ref": Object {
                    "uri": "/gdc/md/referenceworkspace/obj/1271",
                  },
                  "uri": "/gdc/md/referenceworkspace/obj/1271",
                },
              },
            },
          ],
          "colorPalette": undefined,
        },
        "propertiesMeta": Object {
          "legend_enabled": false,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ChartTransformation Legend config should be enabled & on the top by default and push this info out 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "colors": Object {
          "colorAssignments": Array [
            Object {
              "color": Object {
                "type": "guid",
                "value": "1",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "$#,##0.00",
                  "identifier": "aangOxLSeztu",
                  "localIdentifier": "m_aangOxLSeztu",
                  "name": "Amount",
                  "ref": Object {
                    "uri": "/gdc/md/referenceworkspace/obj/1271",
                  },
                  "uri": "/gdc/md/referenceworkspace/obj/1271",
                },
              },
            },
            Object {
              "color": Object {
                "type": "guid",
                "value": "2",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "$#,##0.00",
                  "identifier": "acugFHNJgsBy",
                  "localIdentifier": "m_acugFHNJgsBy",
                  "name": "Won",
                  "ref": Object {
                    "uri": "/gdc/md/referenceworkspace/obj/1272",
                  },
                  "uri": "/gdc/md/referenceworkspace/obj/1272",
                },
              },
            },
            Object {
              "color": Object {
                "type": "guid",
                "value": "3",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "#,##0.00",
                  "localIdentifier": "m_358184a8_f72796b0fbc7c0dc4d17a1e68c1a9933",
                  "name": "Calculated 'Lost' measure",
                  "ref": undefined,
                },
              },
            },
            Object {
              "color": Object {
                "type": "guid",
                "value": "4",
              },
              "headerItem": Object {
                "measureHeaderItem": Object {
                  "format": "#,##0.00",
                  "localIdentifier": "m_7ff816a7_476594e1d138bbf91ab5a7523beacd96",
                  "name": "Ratio of Won and Lost",
                  "ref": undefined,
                },
              },
            },
          ],
          "colorPalette": undefined,
        },
        "propertiesMeta": Object {
          "legend_enabled": true,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
